[package]
name = "fun_time_derive"
description = "The macro implementations of fun_time"
authors = ["Steven Liebregt <stevenliebregt@outlook.com>"]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevenliebregt/fun_time"
keywords = ["function", "timing", "execution_time", "measure", "time"]
categories = ["development-tools::profiling"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

[features]
default = []
log = []